# Ajuna-Node-Template

./: Cargo.toml
node/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: cli.rs  command.rs  command_helper.rs
node/service/: Cargo.toml
node/service/src/: lib.rs
node/service/src/chain_spec/: lib.rs  mod.rs
pallets/ajuna-board/: Cargo.toml
pallets/ajuna-board/src/: lib.rs
pallets/ajuna-board/src/games/: dot4gravity.rs  mod.rs
pallets/ajuna-board/src/games/dot4gravity/: mock.rs  tests.rs
runtime/: Cargo.toml
runtime/solo/: Cargo.toml
runtime/solo/src/: lib.rs
