[profile.release]
panic = "unwind"

[workspace]
members = [
    "node",
    "node/cli",
    "node/service",
    "rpc",
    "runtime/solo",
    "pallets/ajuna-matchmaker",
    "pallets/ajuna-gameregistry",
    "pallets/ajuna-connectfour",
    "pallets/ajuna-runner",
    "pallets/ajuna-board",
    "primitives",
    "ajuna-common",
]
