[package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
name       = "ajuna-node"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.1.0"

[dependencies]
ajuna-cli     = { path = "cli" }
ajuna-service = { path = "service" }

