[package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
name       = "ajuna-service"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.1.0"

[dependencies]
hex-literal  = "0.3.3"
jsonrpc-core = "18.0.0"
serde        = { version = "1.0.132", features = [ "derive" ] }

# Local
ajuna-primitives    = { path = "../../primitives" }
ajuna-rpc           = { path = "../../rpc" }
ajuna-runtime       = { path = "../../runtime" }

# Substrate
frame-benchmarking  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-chain-spec       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-client-api       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-consensus        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-consensus-aura   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-executor         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", features = [ "wasmtime" ] }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-keystore         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-service          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", features = [ "wasmtime" ] }
sc-telemetry        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-consensus        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-consensus-aura   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-core             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-timestamp        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }

[features]
runtime-benchmarks = [
    "ajuna-runtime/runtime-benchmarks",
]

skip-ias-check = [ "ajuna-runtime/skip-ias-check" ]
