[package]
authors     = [ "Ajuna Network <https://github.com/ajuna-network>" ]
description = "Ajuna Network pallet board pallet"
edition     = "2021"
homepage    = "https://ajuna.io"
license     = "Apache-2.0"
name        = "pallet-ajuna-board"
repository  = "https://github.com/ajuna-network/Ajuna"
version     = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
ajuna-common = { default-features = false, path = "../../ajuna-common" }
codec        = { default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec", version = "3.0.0" }
scale-info   = { default-features = false, features = [ "derive" ], version = "2.1" }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

# dot4gravity   = { default-features = false, git = "https://github.com/ajuna-network/ajuna-games", branch = "rmm/PLAT-251-implement-dot-4-gravity-logic" }
dot4gravity   = { default-features = false, git = "https://github.com/ajuna-network/ajuna-games", rev = "4d1e5c9a889bd5ee6f01d1973b6177a57ac2672c" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[features]
default     = [ "std" ]
std         = [ "ajuna-common/std", "codec/std", "sp-runtime/std", "scale-info/std", "frame-support/std", "frame-system/std", "sp-std/std" ]
try-runtime = [ "frame-support/try-runtime" ]
